@@ -19,7 +19,7 @@ public class PrettySqlFormat implements MessageFormattingStrategy {
     @Override
     public String formatMessage(int connectionId, String now, long elapsed, String category, String prepared, String sql, String url) {
         sql = formatSql(category, sql);
-        return String.format("[%s] | %d ms | %s", category, elapsed, formatSql(category, sql));
+        return "[%s] | %d ms | %s".formatted(category, elapsed, formatSql(category, sql));
     }
 
     private String formatSql(String category, String sql) {
